Add FE Service and BE Handler templates

--- a/CC_Synchronizer/BackendDataHandler/BackendDataHandler.csproj
+++ b/CC_Synchronizer/BackendDataHandler/BackendDataHandler.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8468DAE2-9729-491F-9CF0-869478763403}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>CC_Synchronizer</RootNamespace>
-    <AssemblyName>CC_Synchronizer</AssemblyName>
+    <ProjectGuid>{86386307-7A44-4300-B3F4-DE6D7C2BBCD6}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>BackendDataHandler</RootNamespace>
+    <AssemblyName>BackendDataHandler</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <WcfConfigValidationEnabled>True</WcfConfigValidationEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -35,8 +32,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,24 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppService\AppServer.cs" />
-    <Compile Include="AppService\ClientHandler.cs" />
-    <Compile Include="FrontendService\FrontendHost.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="BackendDataHandling.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BackendDataHandler\BackendDataHandler.csproj">
-      <Project>{86386307-7a44-4300-b3f4-de6d7c2bbcd6}</Project>
-      <Name>BackendDataHandler</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\FrontendServiceProvider\FrontendServiceProvider.csproj">
-      <Project>{fdd95d55-81a7-48d8-a845-08a267b2fa2b}</Project>
-      <Name>FrontendServiceProvider</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
