--- a/CC_Synchronizer/FrontendServiceProvider/FrontendServiceProvider.csproj
+++ b/CC_Synchronizer/FrontendServiceProvider/FrontendServiceProvider.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8468DAE2-9729-491F-9CF0-869478763403}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>CC_Synchronizer</RootNamespace>
-    <AssemblyName>CC_Synchronizer</AssemblyName>
+    <ProjectGuid>{FDD95D55-81A7-48D8-A845-08A267B2FA2B}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>FrontendServiceProvider</RootNamespace>
+    <AssemblyName>FrontendServiceProvider</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <WcfConfigValidationEnabled>True</WcfConfigValidationEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -45,24 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppService\AppServer.cs" />
-    <Compile Include="AppService\ClientHandler.cs" />
-    <Compile Include="FrontendService\FrontendHost.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="FrontendService.cs" />
+    <Compile Include="IFrontendService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BackendDataHandler\BackendDataHandler.csproj">
-      <Project>{86386307-7a44-4300-b3f4-de6d7c2bbcd6}</Project>
-      <Name>BackendDataHandler</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\FrontendServiceProvider\FrontendServiceProvider.csproj">
-      <Project>{fdd95d55-81a7-48d8-a845-08a267b2fa2b}</Project>
-      <Name>FrontendServiceProvider</Name>
-    </ProjectReference>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
