Add first DataModels

--- a/CC_Synchronizer/FrontendServiceProvider/FrontendServiceProvider.csproj
+++ b/CC_Synchronizer/FrontendServiceProvider/FrontendServiceProvider.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataModels\DMIngredient.cs" />
+    <Compile Include="DataModels\DMPackage.cs" />
+    <Compile Include="DataModels\DMProduct.cs" />
+    <Compile Include="DataModels\DMRecipe.cs" />
     <Compile Include="FrontendService.cs" />
     <Compile Include="IFrontendService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
