Added a new Project (for REST), copied DataModels

--- a/CC_Synchronizer/FrontendServiceProvider/app.config
+++ b/CC_Synchronizer/FrontendServiceProvider/app.config
@@ -23,6 +23,19 @@
                     </baseAddresses>
                 </host>
             </service>
+            <service name="FrontendServiceProvider.RestServiceImpl">
+                <endpoint address="" binding="basicHttpBinding" contract="FrontendServiceProvider.IRestServiceImpl">
+                    <identity>
+                        <dns value="localhost" />
+                    </identity>
+                </endpoint>
+                <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+                <host>
+                    <baseAddresses>
+                        <add baseAddress="http://localhost:8733/Design_Time_Addresses/FrontendServiceProvider/RestServiceImpl/" />
+                    </baseAddresses>
+                </host>
+            </service>
         </services>
     </system.serviceModel>
 </configuration>
