--- a/CC_Synchronizer/CC_Synchronizer/App.config
+++ b/CC_Synchronizer/CC_Synchronizer/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <connectionStrings>
+    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=Admin;Password=Manager_123;Data Source=oracle" />
+    <add name="BackendDBEntities" connectionString="metadata=res://*/DBModel_BackEnd.csdl|res://*/DBModel_BackEnd.ssdl|res://*/DBModel_BackEnd.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=FST4DB;PASSWORD=Manager_123;USER ID=ADMIN&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
