--- a/CC_Synchronizer/BackendDataHandler/App.config
+++ b/CC_Synchronizer/BackendDataHandler/App.config
@@ -13,7 +13,7 @@
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="Oracle.ManagedDataAccess.Client" type="Oracle.ManagedDataAccess.EntityFramework.EFOracleProviderServices, Oracle.ManagedDataAccess.EntityFramework, Version=6.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342" />
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      
     </providers>
   </entityFramework>
   <system.data>
@@ -40,5 +40,6 @@
   </oracle.manageddataaccess.client>
   <connectionStrings>
     <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=Admin;Password=Manager_123;Data Source=oracle" />
+    <add name="BackendDBEntities" connectionString="metadata=res://*/DBModel_BackEnd.csdl|res://*/DBModel_BackEnd.ssdl|res://*/DBModel_BackEnd.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=FST4DB;PASSWORD=Manager_123;USER ID=ADMIN&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
