--- a/CC_Synchronizer/BackendDataHandler/BackendDataHandler.csproj
+++ b/CC_Synchronizer/BackendDataHandler/BackendDataHandler.csproj
@@ -140,7 +140,6 @@
     <Compile Include="PACKAGE.cs">
       <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
     </Compile>
-    <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RECIEPE.cs">
       <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
@@ -185,6 +184,12 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SharedLibrary\SharedLibrary.csproj">
+      <Project>{081F0B4A-E2AC-4083-B5F1-092483389899}</Project>
+      <Name>SharedLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
