Neue DB - Tested

--- a/CC_Synchronizer/CC_Synchronizer/App.config
+++ b/CC_Synchronizer/CC_Synchronizer/App.config
@@ -13,9 +13,7 @@
   </startup>
   <connectionStrings>
     <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=Admin;Password=Manager_123;Data Source=oracle"/>
-    <add name="BackendDBEntities"
-      connectionString="metadata=res://*/DBModel_BackEnd.csdl|res://*/DBModel_BackEnd.ssdl|res://*/DBModel_BackEnd.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=FST4DB;PASSWORD=Manager_123;USER ID=ADMIN&quot;"
-      providerName="System.Data.EntityClient"/>
+    <add name="BackendDBEntities2" connectionString="metadata=res://*/DBModel_Backend2.csdl|res://*/DBModel_Backend2.ssdl|res://*/DBModel_Backend2.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=FST4DB;PASSWORD=Manager_123;USER ID=ADMIN&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
