--- a/CC_Synchronizer/BackendDataHandler/BackendDataHandler.csproj
+++ b/CC_Synchronizer/BackendDataHandler/BackendDataHandler.csproj
@@ -101,60 +101,75 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DBModel_BackEnd.edmx</DependentUpon>
     </Compile>
+    <Compile Include="DBModel_Backend2.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DBModel_Backend2.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBModel_Backend2.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DBModel_Backend2.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBModel_Backend2.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DBModel_Backend2.edmx</DependentUpon>
+    </Compile>
     <Compile Include="DEMO_CONSTRAINT_LOOKUP.cs">
-      <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
+      <DependentUpon>DBModel_Backend2.tt</DependentUpon>
     </Compile>
     <Compile Include="DEMO_CUSTOMERS.cs">
-      <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
+      <DependentUpon>DBModel_Backend2.tt</DependentUpon>
     </Compile>
     <Compile Include="DEMO_ORDERS.cs">
-      <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
+      <DependentUpon>DBModel_Backend2.tt</DependentUpon>
     </Compile>
     <Compile Include="DEMO_ORDER_ITEMS.cs">
-      <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
+      <DependentUpon>DBModel_Backend2.tt</DependentUpon>
     </Compile>
     <Compile Include="DEMO_PRODUCT_INFO.cs">
-      <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
+      <DependentUpon>DBModel_Backend2.tt</DependentUpon>
     </Compile>
     <Compile Include="DEMO_TAGS.cs">
-      <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
+      <DependentUpon>DBModel_Backend2.tt</DependentUpon>
     </Compile>
     <Compile Include="DEMO_TAGS_SUM.cs">
-      <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
+      <DependentUpon>DBModel_Backend2.tt</DependentUpon>
     </Compile>
     <Compile Include="DEMO_TAGS_TYPE_SUM.cs">
-      <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
+      <DependentUpon>DBModel_Backend2.tt</DependentUpon>
     </Compile>
     <Compile Include="DEPT.cs">
-      <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
+      <DependentUpon>DBModel_Backend2.tt</DependentUpon>
     </Compile>
     <Compile Include="EMP.cs">
-      <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
+      <DependentUpon>DBModel_Backend2.tt</DependentUpon>
     </Compile>
     <Compile Include="INGREDIENT.cs">
-      <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
+      <DependentUpon>DBModel_Backend2.tt</DependentUpon>
     </Compile>
     <Compile Include="INGREDIENT_CATEGORY.cs">
-      <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
+      <DependentUpon>DBModel_Backend2.tt</DependentUpon>
     </Compile>
     <Compile Include="PACKAGE.cs">
-      <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
+      <DependentUpon>DBModel_Backend2.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RECIEPE.cs">
-      <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
+      <DependentUpon>DBModel_Backend2.tt</DependentUpon>
     </Compile>
     <Compile Include="RECIEPE_INGREDIENTS.cs">
-      <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
+      <DependentUpon>DBModel_Backend2.tt</DependentUpon>
     </Compile>
     <Compile Include="RULE.cs">
-      <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
+      <DependentUpon>DBModel_Backend2.tt</DependentUpon>
     </Compile>
     <Compile Include="RULE_CATEGORIES.cs">
-      <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
+      <DependentUpon>DBModel_Backend2.tt</DependentUpon>
     </Compile>
     <Compile Include="SHAPE.cs">
-      <DependentUpon>DBModel_BackEnd.tt</DependentUpon>
+      <DependentUpon>DBModel_Backend2.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -168,6 +183,13 @@
     <None Include="DBModel_BackEnd.edmx.diagram">
       <DependentUpon>DBModel_BackEnd.edmx</DependentUpon>
     </None>
+    <EntityDeploy Include="DBModel_Backend2.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>DBModel_Backend2.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="DBModel_Backend2.edmx.diagram">
+      <DependentUpon>DBModel_Backend2.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -180,6 +202,16 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>DBModel_BackEnd.edmx</DependentUpon>
       <LastGenOutput>DBModel_BackEnd.cs</LastGenOutput>
+    </Content>
+    <Content Include="DBModel_Backend2.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DBModel_Backend2.edmx</DependentUpon>
+      <LastGenOutput>DBModel_Backend2.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="DBModel_Backend2.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DBModel_Backend2.edmx</DependentUpon>
+      <LastGenOutput>DBModel_Backend2.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
