--- a/CC_Synchronizer/SharedLibrary/SharedLibrary.csproj
+++ b/CC_Synchronizer/SharedLibrary/SharedLibrary.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Ingredient.cs" />
     <Compile Include="Models\IngredientCategory.cs" />
     <Compile Include="Models\Order.cs" />
