--- a/CC_Synchronizer/SharedLibrary/SharedLibrary.csproj
+++ b/CC_Synchronizer/SharedLibrary/SharedLibrary.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Models\Ingredient.cs" />
     <Compile Include="Models\IngredientCategory.cs" />
     <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\OrderItem.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\Recipe.cs" />
     <Compile Include="Models\Rule.cs" />
