--- a/CC_Synchronizer/BackendDataHandler/App.config
+++ b/CC_Synchronizer/BackendDataHandler/App.config
@@ -33,7 +33,7 @@
   <oracle.manageddataaccess.client>
     <version number="*">
       <dataSources>
-        <dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=S18-BBB4-FST-04.wi.technikum-wien.at)(PORT = 1526))(CONNECT_DATA=(SERVER = DEDICATED)(SERVICE_NAME = XE))) " />
+        <dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT = 1526))(CONNECT_DATA=(SERVER = DEDICATED)(SERVICE_NAME = XE))) " />
       </dataSources>
     </version>
   </oracle.manageddataaccess.client>
