--- a/CC_Synchronizer/CC_Synchronizer/App.config
+++ b/CC_Synchronizer/CC_Synchronizer/App.config
@@ -42,7 +42,7 @@
   <oracle.manageddataaccess.client>
     <version number="*">
       <dataSources>
-        <dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1526))(CONNECT_DATA=(SERVICE_NAME=ORCL))) "/>
+        <dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT = 1526))(CONNECT_DATA=(SERVER = DEDICATED)(SERVICE_NAME = XE))) " />
       </dataSources>
     </version>
   </oracle.manageddataaccess.client>
