RestWebserver App.Config Corrected

--- a/CC_Synchronizer/RESTFrontendService/Web.config
+++ b/CC_Synchronizer/RESTFrontendService/Web.config
@@ -87,7 +87,7 @@
   <oracle.manageddataaccess.client>
     <version number="*">
       <dataSources>
-        <dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) "/>
+        <dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1526))(CONNECT_DATA=(SERVICE_NAME=XE))) "/>
       </dataSources>
     </version>
   </oracle.manageddataaccess.client>
